--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "display": "standalone",
   "gcm_sender_id": "906849912455",
   "gcm_user_visible_only": true,
-  "theme_color": "#4E8EF7",
+  "theme_color": "#005AA9",
   "background_color": "#ffffff",
   "icons": [
     {
