Nuevo Post + Changes in Authors

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,7 +3,7 @@
   url: "/blog/authors/carlosrojas"
   avatar: "http://i.imgur.com/ecNB0is.png"
   website: "http://www.carlosrojasblog.com/"
-  bio: "Carlos Rojas es Google Product Strategy Expert. Cuando no esta dando charlas en conferencias sobre Angular, Ionic o TypeScript da cursos en Startupers Academy."
+  bio: "Carlos Rojas es HS Gamer 🎮 y Escritor ⌨️. Le gusta compartir conocimiento a traves de Charlas y o Articulos en Ng-Classroom."
   country: "Colombia"
   facebook_url: 'https://www.facebook.com/carlosandresrojas'
   social_links:
@@ -273,7 +273,7 @@
   avatar: "https://firebasestorage.googleapis.com/v0/b/ngclassroom-8ba81.appspot.com/o/assets%2Fmatiasalvarez.jpg?alt=media&token=be72710c-b37f-4f2d-8d70-86dd734ef359"
   website: "https://www.linkedin.com/in/matias-alvarez-sabate-b20717130"
   bio: "Ingeniero Civil en Informática y Telecomunicaciones. Desarrollador web, frontend y backend (django)."
-  country: "Colombia"
+  country: "Chile"
   facebook_url: ""
   social_links:
     - link: ""
