new authors page

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -310,3 +310,33 @@
       icon: "icon-social-octocat"
     - link: "https://www.linkedin.com/in/json-alzate-05a700151/"
       icon: "icon-linkedin"
+- id: "tatianaMolina"
+  name: Tatiana Molina
+  url: "/blog/authors/tatianaMolina"
+  avatar: "https://firebasestorage.googleapis.com/v0/b/ngclassroom-8ba81.appspot.com/o/assets%2FtatianaMolina.jpg?alt=media&token=f0c9d2e6-5d77-4528-a589-f2c24fbee2d9"
+  website: "https://tatymoly.me/"
+  bio: "From Colombia 🇨🇴 Living in Chile 🇨🇱- Software Developer at @Deloitte - Doing things on @angularChile - I don't like avocado toast 🥑🚫🍞 - Be water my friend 🌊"
+  country: "Colombia - Chile"
+  facebook_url: ""
+  social_links:
+    - link: "https://twitter.com/tatymolys"
+      icon: "icon-social-twitter"
+    - link: "https://github.com/tatymoly"
+      icon: "icon-social-octocat"
+    - link: "https://www.linkedin.com/in/tatymoly/"
+      icon: "icon-linkedin"
+- id: "manuelAlmarguer"
+  name: Manuel Almarguer
+  url: "/blog/authors/manuelAlmarguer"
+  avatar: "https://firebasestorage.googleapis.com/v0/b/ngclassroom-8ba81.appspot.com/o/assets%2FmanuelAlmaguer.jpeg?alt=media&token=51371dd8-c690-4654-9aaa-962303880462"
+  website: "https://github.com/manunoly"
+  bio: "Biblio = Ingeniero en Sistemas, Amante de la tecnológica y de su familia, desarrollador Web y Móvil, especialista de BD, defensor del software libre, hincha del Barcelona, casado con una chica que escribe código y un nene que ya sabe POO."
+  country: "Cuba-Ecuador"
+  facebook_url: ""
+  social_links:
+    - link: "https://twitter.com/manunoly"
+      icon: "icon-social-twitter"
+    - link: "https://github.com/manunoly"
+      icon: "icon-social-octocat"
+    - link: "https://www.linkedin.com/in/manunoly/"
+      icon: "icon-linkedin"
