--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "ng-classroom, Crea Apps con Angular en cualquier plataforma."
+title: "Ng-classroom, Crea Apps con Angular en cualquier plataforma."
 description: "Aprende Angular, Ionic, Firebase, Nativescript y desarrolla increibles apps para Android y IOS."
 keywords: "ion-book,html5,javascript,mobile,ionic,hybrid,phonegap,cordova,native,ios,android,angularjs,ionic 2,angular 2,curso de ionic 2, aprender ionic 2, ionic 3, ionic framework,hacer aplicaciones con ionic,aplicaciones hibridas, angular 4"
 
@@ -8,7 +8,7 @@ cover: "/images/cover.jpg"
 path: 'https://blog.ng-classroom.com/'
 
 pwa_enabled: 0
-ads_enabled: 0
+ads_enabled: 1
 push_notifications: 1
 google_optimize: 1
 google_cse: 1
