--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,10 +2,10 @@
   name: Carlos Rojas
   url: "/blog/authors/carlosrojas"
   avatar: "http://i.imgur.com/ecNB0is.png"
-  website: "http://www.carlosrojasblog.com/"
-  bio: "Carlos Rojas es HS Gamer 🎮 y Escritor ⌨️. Le gusta compartir conocimiento a traves de Charlas y o Articulos en Ng-Classroom."
+  website: "https://linktr.ee/carlosrojas_o"
+  bio: "Techno-Philosopher 🤔 + HS Gamer 🎮 + Book Writer ⌨️"
   country: "Colombia"
-  facebook_url: 'https://www.facebook.com/carlosandresrojas'
+  facebook_url: 'https://www.facebook.com/carlosrojas84/'
   social_links:
     - link: "https://twitter.com/carlosrojas_o"
       icon: "icon-social-twitter"
