--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -4,38 +4,36 @@ menu_header:
   - title: Blog
     url: '/blog'
     target: '_self'
+  - title: Youtube
+    url: 'https://www.youtube.com/channel/UCxs-DaSRmp8k23n79WjXndw?sub_confirmation=1'
+    target: '_blank'
+  - title: Podcast
+    url: 'https://podcast.maestriajs.com'
+    target: '_blank'
   - title: Cursos
     url: 'https://www.maestriajs.com/'
     target: '_blank'
-# - title: Talleres
-#   url: 'https://startupers.ng-classroom.com/'
-#   target: '_blank'
-#  - title: Market
-#   url: 'https://market.ng-classroom.com'
-#   target: '_blank'
 # ==============================================================
 # Menu Footer
 menu_footer:
   - title: Inicio
     url: '/'
     target: '_self'
+  - title: Youtube
+    url: 'https://www.youtube.com/channel/UCxs-DaSRmp8k23n79WjXndw?sub_confirmation=1'
+    target: '_blank'
+  - title: Podcast
+    url: 'https://podcast.maestriajs.com/'
+    target: '_blank'
   - title: Cursos
     url: 'https://www.maestriajs.com/'
     target: '_blank'
   - title: Autores
     url: '/blog/authors'
     target: '_self'
-# - title: Meetups
-#  url: '/meetups/'
-# - title: Organizadores
-#   url: '/organizers/'
-#   target: '_self'
-  - title: Podcast
-    url: 'https://podcast.maestriajs.com/'
+  - title: Jobs
+    url: 'https://angularjobs.com/'
     target: '_blank'
-# - title: Jobs
-#   url: 'https://angularjobs.com/'
-#   target: '_blank'
   - title: Codigo de Conducta
     url: 'https://github.com/ng-classroom/codigo-de-conducta'
     target: '_blank'
