updating pic carlos

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,7 +1,7 @@
 - id: "carlosrojas"
   name: Carlos Rojas
   url: "/blog/authors/carlosrojas"
-  avatar: "http://i.imgur.com/ecNB0is.png"
+  avatar: "/images/authors/carlosrojas.jpg"
   website: "https://linktr.ee/carlosrojas_o"
   bio: "Techno-Philosopher 🤔 + HS Gamer 🎮 + Book Writer ⌨️"
   country: "Colombia"
