fixing erratum, [Post] Aws appsync offline

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -13,6 +13,9 @@ menu_header:
   - title: 'Podcast'
     url: 'https://podcast.maestriajs.com/'
     target: '_blank'
+  - title: 'Cursos'
+    url: 'https://bootcampwithus.usefedora.com'
+    target: '_blank'
 # ==============================================================
 # Menu Footer
 menu_footer:
