Sending to maestriajs

--- a/_data/organizers.yml
+++ b/_data/organizers.yml
@@ -2,8 +2,8 @@
   name: Carlos Rojas
   url: "/blog/authors/carlosrojas"
   avatar: "http://i.imgur.com/ecNB0is.png"
-  website: "http://www.carlosrojasblog.com/"
-  bio: "Carlos Rojas es Google Product Strategy Expert. Cuando no esta dando charlas en conferencias sobre Angular, Ionic o TypeScript da cursos en Startupers Academy."
+  website: "http://www.carlosrojas.dev/"
+  bio: "Carlos Rojas es JS Developer. Cuando no esta dando charlas en conferencias sobre Angular, Ionic o TypeScript da cursos en MaestriaJS."
   country: "Colombia"
   facebook_url: 'https://www.facebook.com/carlosandresrojas'
   meetups:
