--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "Ng-classroom, Crea Apps con Angular en cualquier plataforma."
-description: "Aprende Angular, Ionic, Firebase, Nativescript y desarrolla increibles apps para Android y IOS."
+title: "MaestriaJS, Crea Apps con JavaScript en cualquier plataforma."
+description: "Aprende JavaScript, Ionic, Firebase, Nativescript y desarrolla increibles apps para Android y IOS."
 keywords: "ion-book,html5,javascript,mobile,ionic,hybrid,phonegap,cordova,native,ios,android,angularjs,ionic 2,angular 2,curso de ionic 2, aprender ionic 2, ionic 3, ionic framework,hacer aplicaciones con ionic,aplicaciones hibridas, angular 4"
 
 baseurl: ""
