--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,6 @@
 {
   "hosting": {
+    "site": "maestria-js",
     "public": "_site",
     "ignore": [
       "bower.json",
@@ -17,7 +18,6 @@
         "value" : "max-age=604800"
       } ]
     }, {
-      // Sets the cache header for 404 pages to cache for 5 minutes
       "source" : "404.html",
       "headers" : [ {
         "key" : "Cache-Control",
