new colors + links

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,3 +1,1 @@
-text: 'Somos un pequeño pedazo del Internet empoderado por la Comunidad de Ionic en Español. 
-  
-Aprende a crear apps con HTML, CSS y Javascript con nuestros Tutoriales, Libro, Slack y Publicaciones.'
+text: 'Somos una comunidad de JavaScript en Español. Aprende a crear apps con HTML, CSS y Javascript con nuestros Tutoriales.'
