--- a/_data/home.yml
+++ b/_data/home.yml
@@ -2,7 +2,7 @@ banner_title: "Desarrolla Apps para Android,IOS y PWAs con JavaScript."
 banner_text: "En este lugar podras encontrar. <ul><li>Tutoriales actualizados.</li><li>Versiones utilizadas en cada post.</li><li>Hangouts con expertos.</li><li>Empoderado por la comunidad.</li><li>Hablando tu idioma.</li><ul>"
 
 blog_title: 'Nuestro Blog'
-blog_text: 'Somos una comunidad de Ionic en español. Aprende a crear apps con HTML, CSS, JS.'
+blog_text: 'Somos una comunidad de JavaScript en español. Aprende a crear apps con HTML, CSS, JS.'
 blog_btn_text: 'Ver más artículos'
 
 topics_title: "¿ De que hablamos ?"
