--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
+    "disqus-react": "^1.0.10",
+    "firebase-tools": "^8.12.1",
     "gatsby": "^2.24.66",
     "gatsby-image": "^2.4.20",
     "gatsby-plugin-feed": "^2.5.13",
@@ -51,6 +53,8 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "deploy:staging": "gatsby build && firebase deploy --only hosting:staging",
+    "deploy:prod": "gatsby build && firebase deploy --only hosting:prod",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   }
 }
