--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-offline": "^3.2.29",
     "gatsby-plugin-react-helmet": "^3.3.12",
     "gatsby-plugin-sharp": "^2.6.37",
+    "gatsby-plugin-sitemap": "^2.4.16",
     "gatsby-remark-copy-linked-files": "^2.3.17",
     "gatsby-remark-images": "^3.3.31",
     "gatsby-remark-prismjs": "^3.5.14",
